Fixing not updating with dangerouslySetInnerHTML and innerHTML compatibility on firefox and double scrollbar on windows

--- a/web/layout/app.css
+++ b/web/layout/app.css
@@ -2,7 +2,6 @@
 @import 'font/style.css';
 html {
   height: 100%;
-  overflow-y: scroll;
 }
 body {
   height: 100%;
@@ -14,7 +13,6 @@ body {
   background: radial-gradient(circle, #fff3d7, #e9c699);
   font-family: 'Cabin', sans-serif;
   color: #009992;
-  overflow-y: scroll;
 }
 a {
   font-style: italic;
@@ -1202,8 +1200,9 @@ button.extraFilterButton:hover.checked input[type="checkbox"] + label:before {
   overflow-y: scroll;
 }
 .singleChat .inputArea .text .content {
-  width: 100%;
   display: inline-block;
+  min-height: 25px;
+  width: 100%;
   outline: none;
 }
 .singleChat .inputArea .text .content * {
