--- a/web/layout/stylus/background.styl
+++ b/web/layout/stylus/background.styl
@@ -1,6 +1,5 @@
 html
 	height 100%
-	overflow-y: scroll
 
 body
 	height 100%
@@ -8,7 +7,6 @@ body
 	background radial-gradient(circle, #FFF3D7, #E9C699)
 	font-family: 'Cabin', sans-serif
 	color: #009992
-	overflow-y: scroll
 
 a
 	font-style: italic
