--- a/web/layout/stylus/index.styl
+++ b/web/layout/stylus/index.styl
@@ -626,8 +626,9 @@ button.extraFilterButton
 			overflow-y: scroll
 
 			.content
-				width: 100%
 				display: inline-block
+				min-height: 25px
+				width: 100%
 				outline: none
 
 				*
